Fixed text alignment on about me page

--- a/about_me_styles.css
+++ b/about_me_styles.css
@@ -119,7 +119,7 @@ body {
 
 @media (min-width: 920px) {
     .text-block {
-        margin: 10px 0px 0 0px;
+        margin: 0;
         max-width: 100%;
     }
 }
